@@ -1419,27 +1419,15 @@
     </tr>
 
     <tr>
-      <td>Turn all TIA objects off</td>
+      <td>Toggle all TIA objects</td>
       <td>Alt + .</td>
       <td>Cmd + .</td>
     </tr>
 
     <tr>
-      <td>Turn all TIA objects on</td>
-      <td>Alt + /</td>
-      <td>Cmd + /</td>
-    </tr>
-
-    <tr>
-      <td>Turn all TIA collisions off</td>
+      <td>Toggle all TIA collisions</td>
       <td>Shift-Alt + .</td>
       <td>Shift-Cmd + .</td>
-    </tr>
-
-    <tr>
-      <td>Turn all TIA collisions on</td>
-      <td>Shift-Alt + /</td>
-      <td>Shift-Cmd + /</td>
     </tr>
   </table>
 
